fix: Enhance scrollbar styling for improved user experience

--- a/src/app.css
+++ b/src/app.css
@@ -75,3 +75,16 @@
 		background-color: #272727;
 	}
 }
+
+
+::-webkit-scrollbar {
+	@apply h-2.5 w-2.5;
+}
+
+::-webkit-scrollbar-track {
+	@apply bg-transparent;
+}
+
+::-webkit-scrollbar-thumb {
+	@apply rounded-full border-[1px] border-solid border-transparent bg-zinc-400 bg-clip-padding;
+}
